tdf#122735 get the correct ActiveViewContact

In ObjectContactOfPageView::getActiveViewContact() the decision
which ViewContact is to be returned depends on if the SdrObjList
fetched from the SdrPageView is a SdrObject or a SdrPage.

Both are derived from SdrObjList, so to decide that the helpers
getSdrObjectFromSdrObjList and getSdrPageFromSdrObjList are
used.

For SdrObject the 1st will return ptr, 2nd nullptr. For SdrPage
the 1st and 2nd will return ptr due to 1st trying to return
something useful by getting up the hierarchy and return the
SdrPage the SdrObjList/SdrObject is inserted (as the name says).

This means that here the test for SdrObject *has* to be used 1st
to correctly decide of what nature SdrObjList is.

NOTE: Here it would also be possible to use dynamic_cast(s) to
the classes to test for, but tooling is virtual/faster.

Change-Id: I113afceddd3210aa63960d248f7c7356f82cf413
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154065
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>